# uwu-efi

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
etc/: meson.build
examples/: meson.build
uwu-asm/: meson.build  uwu-asm.cc
uwu-asm/include/: fs.hh  meson.build
uwu-efi/: config.hh.in  meson.build  utilities.hh
uwu-efi/arch/: meson.build
uwu-efi/arch/aarch64/: meson.build
uwu-efi/arch/amd64/: meson.build
uwu-efi/arch/ebc/: meson.build
uwu-efi/arch/rv64/: meson.build
uwu-efi/include/: meson.build
uwu-efi/include/arch/: meson.build
uwu-efi/include/arch/aarch64/: meson.build
uwu-efi/include/arch/amd64/: meson.build
uwu-efi/include/arch/ebc/: meson.build
uwu-efi/include/arch/rv64/: meson.build
uwu-util/: __init__.py  __main__.py  config.py  templates.py  utility.py
uwu-util/commands/: delete_env.py  launch_env.py  list_env.py  modify_env_fs.py  new_env.py
uwu-util/fs/: __init__.py  fat32.py  gpt.py  guids.py
